# agentic-ai-framework

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: market_research.py
src/: __init__.py
src/agents/: base_agent.py  subagent.py
src/orchestrator/: orchestrator.py  result_synthesizer.py  task_planner.py
src/utils/: tools.py
